--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@angular/common": "~11.0.6",
     "@angular/compiler": "~11.0.6",
     "@angular/core": "~11.0.6",
+    "@angular/flex-layout": "^11.0.0-beta.33",
     "@angular/forms": "~11.0.6",
     "@angular/material": "^11.0.3",
     "@angular/platform-browser": "~11.0.6",
     "@angular/platform-browser-dynamic": "~11.0.6",
     "@angular/router": "~11.0.6",
+    "classlist.js": "^1.1.20150312",
     "ngx-toastr": "^13.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
